<resources>
    <string name="app_name">NutriCampus</string>
    <string name="switch_ativo">Ativo</string>
    <string name="switch_inativo">Inativo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>

    <string name="logout_text">Sair</string>

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
    <string name="menu_visualizar_animais">Visualizar animais</string>
    <string name="menu_historico">Ver histórico de dados</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="link_novo_cadastro">Não é cadastrado? <b>Crie sua conta</b></string>
    <string name="link_esqueceu_senha">Esqueceu sua senha?</string>

    <string name="msg_bem_vindo">Bem-vindo ao NutriCampus</string>
    <string name="msg_sucesso_cadastro">%1$s cadastrado com sucesso!</string>
    <string name="msg_erro_crz">CRZ/CRMV inválido, mínimo de 4 caracteres</string>
    <string name="msg_crz_nao_encontrado">CRZ/CRMV não encontrado</string>
    <string name="msg_erro_email">Email inválido</string>
    <string name="msg_erro_campo">Campo obrigatório</string>
    <string name="msg_nome_existente">Nome já cadastrado</string>
    <string name="msg_erro_CRZ">CRZ/CRMV incompleto</string>
    <string name="msg_erro_cpf_1">CPF incompleto</string>
    <string name="msg_erro_cpf_2">CPF inválido</string>
    <string name="msg_erro_telefone">Número de telefone inválido</string>
    <string name="msg_erro_senha">Senha deve ter no mínimo 5 caracteres</string>
    <string name="msg_falha_login">Falha no login</string>
    <string name="msg_dados_login_invalido">usuário ou senha inválidos</string>
    <string name="msg_erro_login_usuario">Usuário inválido</string>
    <string name="msg_erro_senha_usuario">Senha inválido</string>
    <string name="msg_erro_cadastro_usuario">CPF/CRMV já cadastrado(s)</string>
    <string name="msg_erro_cadastro_proprietario">CPF já cadastrado !</string>
    <string name="msg_erro_cadastro_geral">Campos inválidos</string>
    <string name="msg_erro_busca_proprietario">Proprietário não encontrado</string>
    <string name="msg_erro_editar_proprietario">Pesquise um proprietário</string>
    <string name="msg_erro_atualizar_proprietario">Erro ao atualizar o proprietário</string>
    <string name="msg_erro_spinner_proprietario">Selecione uma propriedade</string>
    <string name="msg_erro_cep_incompleto">CEP incompleto</string>
    <string name="msg_erro_telefone_incompleto">Telefone incompleto</string>
    <string name="msg_erro_cadastro">Erro ao tentar realizar o cadastro</string>
    <string name="msg_erro_falta_de_dados">Falta preencher campos obrigatórios na aba anterior ou confirmá-los</string>
    <string name="msg_erro_duplicidade_animal">Animal já cadastrado nesta propriedade</string>
    <string name="msg_erro_busca_dados_compl">Para buscar é preciso um identificador e uma propriedade</string>
    <string name="msg_erro_busca">Animal não encontrado</string>
    <string name="msg_erro_grupo">Nenhum grupo cadastrado</string>


    <string name="msg_sucesso_excluir_usuario">Usuário excluido com sucesso</string>
    <string name="msg_sucesso">"%1$s %2$s cadastrado com sucesso!"</string>
    <string name="msg_sucesso_atualizar">"%1$s %2$s atualizado com sucesso!"</string>
    <string name="msg_sucesso_atualizar_registro">Registro atualizado com sucesso</string>
    <string name="msg_sucesso_atualizar_usuario">Usuário atualizado com sucesso</string>
    <string name="msg_erro_deletar_registro">Falha ao tentar remover o registro</string>
    <string name="msg_erro_atualizar_registro">Falha ao tentar atualizar o registro</string>
    <string name="msg_sucesso_remover_registro">Registro removido com sucesso</string>
    <string name="msg_completar_cadastro">Complete %1$s com os demais dados</string>

    <string name="msg_cadastro_salvo">Cadastro realizado com sucesso</string>
    <string name="msg_cadastre_proprietario">Cadastre um proprietário</string>
    <string name="msg_cadastre_propriedade">Cadastre uma propriedade</string>
    <string name="msg_spinner_proprietario">Selecione um proprietário</string>
    <string name="msg_spinner_propriedade">Procure uma propriedade</string>

    <string name="msg_excluir_propriedade_sucesso">Propriedade removida com sucesso </string>
    <string name="msg_excluir_proprietario_sucesso">Proprietário removido com sucesso </string>
    <string name="msg_excluir_composto_sucesso">Composto removido com sucesso </string>
    <string name="msg_excluir_dieta_sucesso">Dieta removida com sucesso </string>
    <string name="msg_excluir_animal_sucesso">Animal removido com sucesso </string>
    <string name="msg_excluir_propriedade_falha">Falha ao tentar remover a propriedade</string>
    <string name="msg_excluir_proprietario_falha">Falha ao tentar remover o proprietátio</string>
    <string name="msg_excluir_confirmar">Tem certeza que deseja remover</string>
    <string name="msg_excluir_confirmar_propriedade">Tem certeza que deseja remover a propriedade %1$s, isso excluirá animais vinculados a ela?</string>
    <string name="msg_excluir_confirmar_propritario">Tem certeza que deseja remover o(a) proprietário(a) %1$s, isso excluirá as propriedades vinculados a ele(a)?</string>
    <string name="msg_excluir_confirmar_composto_alimentar">Tem certeza que deseja remover o Composto %1$s?</string>

    <string name="msg_excluir_confirmar_dieta">Tem certeza que deseja remover a Dieta %1$s?</string>
    <string name="msg_excluir_confirmar_animal">Tem certeza que deseja remover, isso excluirá o histórico do animal </string>
    <string name="msg_excluir_confirmar_conta">Tem certeza que deseja remover sua conta, isso excluirá todas as informações inseridas no sistema </string>



    <string name="msg_atualizar_usuario">Ao atualizar a senha será feito logoff, deseja continuar ?</string>

    <string name="proprietario">Proprietário</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_crz_crmv">CRZ/CRMV</string>
    <string name="campo_cpf">CPF</string>
    <string name="campo_email">E-mail</string>
    <string name="campo_senha">Senha</string>
    <string name="campo_propriedade">Propriedade</string>


    <string name="unidade_medida_kg">%1$s %2$.2f kg</string>
    <string name="unidade_medida_porcento">%</string>

    <!-- Preference -->
    <string name="titulo_conta">Conta</string>
    <string name="pref_conta">conta</string>
    <string name="titulo_sincronizacao">Sincronizar dados</string>
    <string name="sumario_sincronizacao">Enviar dados para o servidor</string>
    <string name="pref_sincronizar">sincronizar</string>


    <!-- Strings: Animais, Prole -->
    <string name="campo_animal">Animal</string>
    <string name="campo_genero">Gênero</string>
    <string name="campo_peso_vivo">Peso (Kg)</string>
    <string name="campo_add_registro">Novo Registro Geral</string>
    <string name="campo_historico">Histórico de dados</string>
    <string name="campo_grupo">Grupo</string>

    <string name="campo_identificador">Identificador</string>
    <string name="campo_data_nascimento">Data de nascimento</string>
    <string name="campo_nenhum_animal">Nenhum animal cadastrado</string>
    <string name="campo_nenhuma_propriedade">Nenhuma propriedade cadastrada</string>

    <string name="campo_nenhum_proprietario">Nenhum proprietário cadastrado</string>
    <string name="campo_nenhum_composto">Nenhum composto cadastrado</string>
    <string name="campo_nenhuma_dieta">Nenhuma dieta cadastrada</string>
    <string name="campo_escolha_ativo">Animal está ativo?</string>
    <string name="campo_confirmacao_dados">Confirmar dados</string>
    <string name="campo_data">Data</string>
    <string name="campo_data_registro">Data de registro</string>
    <string name="campo_caminhada_vertical">Caminhada vertical (m)</string>
    <string name="campo_caminhada_horizontal">Caminhada Horizontal (m)</string>
    <string name="campo_eec">eec</string>
    <string name="campo_eec1">1</string>
    <string name="campo_eec2">2</string>
    <string name="campo_eec3">3</string>
    <string name="campo_eec4">4</string>
    <string name="campo_eec5">5</string>
    <string name="campo_pastando">Pastando</string>
    <string name="campo_lactacao">Lactação</string>
    <string name="campo_gestante">Gestante</string>
    <string name="campo_cio">Cio</string>
    <string name="campo_semana_lactacao">Semana de Lactação</string>
    <string name="campo_corrigir">Corrigir</string>
    <string-array name="titulos">
        <item>Animal</item>
        <item>Dados Gerais</item>
    </string-array>

    <string name="titulo_add_animal">Novo Animal</string>

    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
        <item>TODOS</item>
    </string-array>

    <string-array name="anos">
        <item>2017</item>

    </string-array>
    <plurals name="quatidade_registros">
        <item quantity="one">1 animal encontrado</item>
        <item quantity="other">%d animais encontrados</item>
    </plurals>


    <plurals name="msg_registros_encontrados">
        <item quantity="one">1 registro encontrado</item>
        <item quantity="other">%d registros encontrados</item>
    </plurals>


    <!-- Strings: Propriedade e proprietário -->
    <string name="campo_nome_propriedade">Nome da Propriedade</string>
    <string name="campo_telefone">Telefone</string>

    <!-- titulos das telas -->
    <string name="titulo_recuperar_senha">Recuperar senha</string>
    <string name="titulo_novo_usuario">Novo usuário</string>
    <string name="titulo_novo_composto">Novo composto</string>
    <string name="titulo_dieta">Dieta</string>
    <string name="titulo_nova_dieta">Nova dieta</string>
    <string name="titulo_visualizar_dieta">Visualizar dieta</string>
    <string name="titulo_editar_dieta">Editar dieta</string>
    <string name="titulo_novo_proprietario">Novo proprietário</string>
    <string name="titulo_nova_producao_leite">Novo registro</string>
    <string name="titulo_nova_prole">Nova Prole</string>
    <string name="titulo_prole">Prole</string>
    <string name="titulo_editar_prole">Editar prole</string>
    <string name="titulo_lista_propriedade">Propriedades</string>
    <string name="titulo_lista_compostos_alimentares">Compostos Alimentares</string>
    <string name="titulo_add_propriedade">Nova propriedade</string>
    <string name="titulo_editar_propriedade">Editar propriedade</string>
    <string name="titulo_editar_producao">Editar produção de leite</string>
    <string name="titulo_producao">Produção de leite</string>
    <string name="titulo_lista_animais">Animais</string>
    <string name="titulo_editar_conta">Configurações de Conta</string>

    <string name="cadastrar_proprietario"> Cadastrar Proprietario</string>
    <string name="campo_buscar_proprietario_nome">Buscar Proprietário (CPF)</string>

    <string name="campo_lactose">Lactose (%)</string>
    <string name="campo_proteina_bruta">Proteína bruta (%)</string>
    <string name="campo_proteina_verdadeira">Proteína real (%)</string>
    <string name="campo_gordura">Gordura (%)</string>
    <string name="campo_quantidade_kg_dia">Quantidade (kg/dia)</string>

    <string name="campo_rua">Rua</string>
    <string name="campo_bairro">Bairro</string>
    <string name="campo_cidade">Cidade</string>
    <string name="campo_uf">Estado</string>
    <string name="campo_numero">Número</string>
    <string name="campo_cep">CEP</string>

    <string name="campo_spinner_proprietario">Selecione o proprietário…</string>

    <string name="campo_proprietario">Nome do Proprietário</string>
    <string name="campo_nome_proprietario">Proprietário</string>

    <string name="campo_infor_recupera_senha">Informe seus dados e enviaremos um e-mail com a sua senha para o e-mail cadastrado</string>

    <string name="campo_peso">Peso (kg)</string>
    <string name="campo_natimorto">Natimorto</string>

    <string name="msg_senha_enviada">Senha enviada por e-mail</string>
    <string name="msg_sem_internet">Infelizmente não foi detectada uma conexão com a internet</string>
    <string name="menu_ver_producao_leite">Ver produção de leite</string>
    <string name="menu_ver_prole">Ver prole</string>
    <string name="msg_selecione_propriedade">Por favor, selecione uma propriedade cadastrada.</string>
    <string name="text_floating_propriedade">Propriedade</string>
    <string name="text_floating_proprietarios">Proprietários</string>

    <string name="campo_composto">Nome do Composto</string>
    <string name="campo_tipo">Tipo</string>
    <string name="msg_compostos_erro_preenchimento">Preencha todos os campos</string>
    <string name="menu_visualizar_composto">Visualizar composto</string>
    <string name="menu_visualizar_dieta">Visualizar</string>
    <string name="titulo_editar_composto">Editar composto</string>
    <string name="titulo_visualizar_composto">Visualizar composto</string>
    <string name="msg_excluir_composto_falha">Falha ao tentar remover o composto</string>
    <string name="msg_erro_cadastro_composto">Composto já cadastrado!</string>
    <string name="campo_descricao">Descrição</string>
    <string name="camp_fda">fda (%)</string>
    <string name="campo_ndt">ndt (%)</string>
    <string name="campo_pb">pb (%)</string>
    <string name="campo_cnf">cnf (%)</string>
    <string name="campo_mm">mm (%)</string>
    <string name="campo_ee">ee (%)</string>
    <string name="campo_fdn">fdn (%)</string>
    <string name="campo_ms">ms (%)</string>
    <string name="msg_erro_gravar_composto">Erro ao gravar composto</string>

    <string name="titulo_lista_grupos">Grupos</string>
    <string name="title_activity_cadastrar_grupo">Novo Grupo</string>
    <string name="campo_observacao">Observações</string>
    <string name="titulo_editar_grupo">Editar Grupo</string>

    <string name="identificador_dieta">Identificador Dieta</string>
    <string name="proteina_bruta">Proteina Bruta da Dieta (em %)</string>
    <string name="adicionar_grupos">Gerenciar Grupos</string>
    <string name="adicionar_animais">Gerenciar Animais</string>
    <string name="adicionar_compostos">Gerenciar Compostos</string>
    <string name="calcular">Calcular</string>
    <string name="titulo_relatorios">Geração de Relatórios</string>

</resources>
