<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaListaDadosCompl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    tools:context="com.nutricampus.app.activities.ListaDadosComplActivity">

    <ListView
        android:id="@+id/listDadosCompl"
        android:background="@drawable/caixa_arredondada"
        android:layout_margin="@dimen/margin_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="multipleChoice"
        android:listSelector="@color/colorItemListSelected"
        android:longClickable="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_add_dados_compl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_light" />

</android.support.design.widget.CoordinatorLayout>
