...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_inputs_form"
                    android:layout_marginTop="6dp"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/input_peso_vivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/campo_peso_vivo"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

...
                    android:text="@string/campo_eec5"
                    android:textSize="17sp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:drawableLeft="@drawable/save"
            android:onClick="salvarHistoricoAnimal"
            android:text="@string/save" />
...
